--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Android3717Project1</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_image_grid_view">ImageGridViewActivity</string>
+    <string name="title_activity_image_swipe_view">ImageSwipeViewActivity</string>
 
 </resources>
