+ Added a handler for the entire application to share and use for doing things on background, worker threads, or when accessing the UI thread to update it. + Added a StartImageGridViewActivity to test the ImageGridViewActivity....should be removed later for production release - Got the ImageGridViewActivity to display images from the internet when it is started by a proper starting intent - TODO: start the ImageSwipeViewActivity when a thumbnail of a cat is tapped - TODO: make the thumbnails displayed in this activity bigger..and possible other aesthetic things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_image_grid_view">ImageGridViewActivity</string>
     <string name="title_activity_image_swipe_view">ImageSwipeViewActivity</string>
+    <string name="title_activity_start_image_grid_view">StartImageGridViewActivity</string>
 
 </resources>
