--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="title_activity_image_swipe_view">ImageSwipeViewActivity</string>
     <string name="title_activity_start_image_grid_view">StartImageGridViewActivity</string>
 
+    //Main Menu Strings
+    
+    <string name="btn_login">Login</string>
+    <string name="btn_random">Random Pets!</string>
+    <string name="btn_week">Pet of the Week</string>
+    <string name="btn_search">Search</string>
+    <string name="title_activity_login">LoginActivity</string>
+
 </resources>
