getting werk done on imgur upload.
still can't debug why it fails to connect to imgur

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="btn_random">Random Pets!</string>
     <string name="btn_week">Pet of the Week</string>
     <string name="btn_search">Search</string>
+    <string name="btn_imgUpload">Upload Image</string>
     <string name="title_activity_login">LoginActivity</string>
 
     <!-- SearchActivity strings -->
