Created Database classes and basic account creation page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="not_found">Address not Found</string>
     <string name="no_internet">No Internet Connection</string>
     <string name="title_activity_image_upload">ImageUpload</string>
+    <string name="title_activity_account_creation">AccountCreation</string>
 
 </resources>
