Log out complete!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- LoginActivity Strings -->
     <string name="btn_login">Login</string>
+    <string name="btn_logout">Logout</string>
     <string name="btn_random">Random Pets!</string>
     <string name="btn_week">Pet of the Week</string>
     <string name="btn_search">Search</string>
