Added some code for registration. Hope to get it to go from Register straight to Main menu after Register Success. Still need register function to return true/false to make that work
Worked on my account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_start_image_grid_view">StartImageGridViewActivity</string>
 
     <!-- LoginActivity Strings -->
+    <string name="btn_myAccount">My Account</string>
     <string name="btn_login">Login</string>
     <string name="btn_logout">Logout</string>
     <string name="btn_random">Random Pets!</string>
